// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button click event 1`] = `
<Button
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button ripple"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-button ripple sc-htpNat deJRSG"
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</Button>
`;

exports[`Test creation of a Button control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button ripple test-class"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
    visible={true}
  >
    <Icon
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Button control with custom icon, colors, and border 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button ripple"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "green",
        "borderWidth": "2px",
        "color": "red",
      }
    }
    visible={true}
  >
    <Icon
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="superpowers"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a Button 1`] = `
<Button
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button nohover"
      disabled={true}
      onClick={[Function]}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-button nohover sc-htpNat jjHPcA"
        disabled={true}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</Button>
`;

exports[`Test making a Button invisible 1`] = `
<Button
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button ripple"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      visible={false}
    >
      <div
        className="ui-button ripple sc-htpNat psfup"
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</Button>
`;

exports[`Test retrieval of Button props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
